name:                haprs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/haprs#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     APRS, APRS.Types
  build-depends:       base >= 4.7 && < 5
                     , dimensional
                     , geodetics, text
  default-language:    Haskell2010
  ghc-options:        -Wall

test-suite haprs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       APRSTests, FAPTests
  build-depends:       base
                     , haprs
                     , aeson, bytestring, text
                     , HUnit
                     , QuickCheck
                     , tasty, tasty-hunit, tasty-quickcheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haprs
