name:                haprs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/haprs#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     APRS, APRS.Types, APRS.MicE, APRS.NMEA, APRS.IS, APRS.Arbitrary
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:        -Wall

executable gate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, optparse-applicative, mtl, async, hslogger
                     , safe-exceptions
                     , unbounded-delays
                     , network
                     , attoparsec, text
                     , haprs
                     , ansi-terminal
                     , concurrent-extra
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite haprs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       APRSTests, FAPTests, MicETests, ISTests
  build-depends:       base
                     , haprs
                     , aeson, bytestring, text, containers
                     , HUnit, HUnit-approx
                     , QuickCheck, attoparsec
                     , tasty, tasty-hunit, tasty-quickcheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haprs
